[gd_scene load_steps=3 format=2]

[ext_resource path="res://GDbutt.tres" type="Theme" id=1]
[ext_resource path="res://RemovePerson.gd" type="Script" id=2]

[node name="RemovePerson" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 592.0
margin_bottom = 143.0
theme = ExtResource( 1 )

[node name="Ok" type="Button" parent="Panel"]
margin_left = 272.0
margin_top = 64.0
margin_right = 416.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( -57, 79 )
theme = ExtResource( 1 )
text = "OK"

[node name="Cancel" type="Button" parent="Panel"]
margin_left = 432.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 120.0
theme = ExtResource( 1 )
text = "Cancel"

[node name="Name" type="LineEdit" parent="Panel"]
margin_left = 8.0
margin_top = 16.0
margin_right = 584.0
margin_bottom = 52.0
hint_tooltip = "type your name here"
theme = ExtResource( 1 )

[node name="Ok2" type="Button" parent="Panel"]
margin_left = 22.0
margin_top = 64.0
margin_right = 166.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( -57, 79 )
theme = ExtResource( 1 )
text = "delete all"

[connection signal="pressed" from="Panel/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="Panel/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Panel/Ok2" to="." method="_on_Ok2_pressed"]
